--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,6 @@
 DEBUG=0
 SECRET_KEY=@zamrlepa7ales37+7yt4dz4d43+5dgi2(l)i!+%(g4%6117=(
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] * dunneweb.com www.dunneweb.com
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=project_alpha_prod
 SQL_USER=project_alpha
@@ -8,3 +8,6 @@ SQL_PASSWORD=project_alpha
 SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
+VIRTUAL_HOST=dunneweb.com
+VIRTUAL_PORT=8000
+LETSENCRYPT_HOST=dunneweb.com
