move to rds database

--- a/.env.prod
+++ b/.env.prod
@@ -2,10 +2,10 @@ DEBUG=0
 SECRET_KEY=@zamrlepa7ales37+7yt4dz4d43+5dgi2(l)i!+%(g4%6117=(
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] * dunneweb.com www.dunneweb.com
 SQL_ENGINE=django.db.backends.postgresql
-SQL_DATABASE=project_alpha_prod
-SQL_USER=project_alpha
-SQL_PASSWORD=project_alpha
-SQL_HOST=db
+SQL_DATABASE=djangoec2
+SQL_USER=webapp
+SQL_PASSWORD=c01zbVuLM9dH485ilNKH
+SQL_HOST=djangoec2.cm6kvyvuyvp4.us-west-2.rds.amazonaws.com
 SQL_PORT=5432
 DATABASE=postgres
 VIRTUAL_HOST=dunneweb.com
