--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,6 @@
-Django==3.2.6
+Django==4.1
 gunicorn==20.1.0
 psycopg2-binary==2.9.1
-djangorestframework==3.12.4
+djangorestframework==3.13.1
 django-extensions==3.1.3
+requests==2.28.1
