--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -25,6 +25,13 @@
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "react-router-dom": "^6.3.0"
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
+    "js-cookie": "^3.0.1",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1"
   }
 }
