comics admin css clean up and modified nginx custom.conf

--- a/nginx/custom.conf
+++ b/nginx/custom.conf
@@ -1,1 +1,6 @@
 client_max_body_size 500M;
+
+server {
+    server_name  www.dunneweb.com;
+    return       301 http://dunneweb.com$request_uri;
+}
