--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development --watch",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "eslint --ext .js --ignore-path .gitignore ."
   },
   "keywords": [],
   "author": "",
@@ -14,9 +15,13 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@eslint/js": "^9.23.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.8.1",
+    "eslint": "^9.23.0",
+    "eslint-plugin-react": "^7.37.4",
     "file-loader": "^6.2.0",
+    "globals": "^16.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "webpack": "^5.52.0",
